# TurtleBot-Photogrammetry-Toolkit

./: readme.md
config/: project.env.example
scripts/: build_overlay.sh  capture_gui_camera_survey.py  capture_physical_turtlebot_survey.py  common.sh  edit_photogrammetry_path_gui.py  export_colmap_physical_poses.py  generate_photogrammetry_path.py  record_gui_camera_waypoints.py  render_photogrammetry_path_overlay.py  run_nav2_photogrammetry_capture.py  run_turtlebot_small_house_dark.sh  run_turtlebot_small_house_white_walls.sh  run_turtlebot_world.sh  run_wasd_world.sh
tb4_overlay_ws/src/particlefilter_gz_gui_plugins/: CMakeLists.txt  package.xml
tb4_overlay_ws/src/particlefilter_gz_gui_plugins/environment/: gz_gui_plugin_path.sh
tb4_overlay_ws/src/particlefilter_gz_gui_plugins/gui/: WasdCameraController.qml  WasdCameraController.qrc
tb4_overlay_ws/src/particlefilter_gz_gui_plugins/include/particlefilter_gz_gui_plugins/: WasdCameraController.hh
tb4_overlay_ws/src/particlefilter_gz_gui_plugins/src/: WasdCameraController.cc
tb4_overlay_ws/src/turtlebot4_gz_bringup/: CMakeLists.txt  package.xml
tb4_overlay_ws/src/turtlebot4_gz_bringup/gui/dark/: gui.config
tb4_overlay_ws/src/turtlebot4_gz_bringup/gui/small_house/: gui.config
tb4_overlay_ws/src/turtlebot4_gz_bringup/gui/wasd_camera/: gui.config
tb4_overlay_ws/src/turtlebot4_gz_bringup/launch/: ros_gz_bridge.launch.py  sim.launch.py  turtlebot4_gz.launch.py  turtlebot4_spawn.launch.py
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_AirconditionerA_01/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_AirconditionerB_01/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_BalconyTable_01/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_Ball_01/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_Bed_01/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_Board_01/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_Carpet_01/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_ChairA_01/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_ChairD_01/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_Chandelier_01/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_CoffeeTable_01/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_CookingBench_01/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_Curtain_01/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_DeskPortraitA_01/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/models/aws_robomaker_residential_DeskPortraitA_02/: model.sdf
tb4_overlay_ws/src/turtlebot4_gz_bringup/worlds/: depot.sdf  gs_lab.sdf  living_room.sdf  small_house.sdf  small_house_dark.sdf  small_house_white_walls.sdf
(+57 files in other folders)
