<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>particlefilter_gz_gui_plugins</name>
  <version>0.0.1</version>
  <description>Custom Gazebo GUI plugins for camera control in the particle filter workspace.</description>
  <maintainer email="nick@example.com">nick</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz_gui_vendor</depend>
  <depend>gz_transport_vendor</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>gz_plugin_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
